# python-rest-template

./: .gitignore  README.md  alembic.ini  docker-compose.yml  noxfile.py  pyproject.toml  sql_app.db
docs/: conf.py  index.rst
src/project_name/: __init__.py  db.py  main.py  schemas.py
src/project_name/example/: endpoints.py  models.py  schemas.py  service.py
